--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -85,9 +85,31 @@
                 app:strokeColor = "@color/black"
                 app:cornerRadius = "20dp"/>
 
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="39dp"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/pumpkin"
+                android:text="Pas de Compte?"
+                android:textColor="@color/platinum"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:cornerRadius="20dp"
+                app:strokeColor="@color/black" />
+
+            <Button
+                android:layout_width="145dp"
+                android:layout_height="39dp"
+                android:id="@+id/inscrire"
+                android:backgroundTint="@color/blue"
+                android:text="S'inscrire"
+                android:textColor="@color/platinum"
+                android:textSize="18sp"
+                android:textAlignment="left"
+                android:textStyle="italic"
+                app:cornerRadius="20dp"
+                app:strokeColor="@color/black" />
 
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
