--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/platinum"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -59,24 +59,11 @@
                 android:textColor="@color/black"
                 android:drawablePadding="8dp"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/passwordCheck"
-                android:visibility="gone"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
-                android:inputType="textPassword"
-                android:padding="8dp"
-                android:hint="Confirmation du mot de passe"
-                android:textColor="@color/black"
-                android:drawablePadding="8dp"/>
-
             <Button
+                android:id="@+id/connexion"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="Connexion"
-                android:id="@+id/connexion"
                 android:textColor="@color/platinum"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -98,14 +85,13 @@
                 app:strokeColor="@color/black" />
 
             <Button
-                android:layout_width="145dp"
-                android:layout_height="39dp"
                 android:id="@+id/inscrire"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue"
                 android:text="S'inscrire"
                 android:textColor="@color/platinum"
                 android:textSize="18sp"
-                android:textAlignment="left"
                 android:textStyle="italic"
                 app:cornerRadius="20dp"
                 app:strokeColor="@color/black" />
