--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -78,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:text="Enrégistrer"
-                    android:id="@+id/connexion"
+                    android:id="@+id/register"
                     android:textColor="@color/platinum"
                     android:textStyle="bold"
                     android:textSize="18sp"
