--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -10,7 +10,9 @@
         android:orientation="vertical"
         android:background="@color/platinum"
         android:gravity="center"
-        tools:context=".MainActivity">
+        tools:context=".RegisterActivity">
+
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -30,7 +32,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="S'Enrégistrer"
+                    android:text="S'enregistrer"
                     android:id="@+id/textConnection"
                     android:textSize="36sp"
                     android:textAlignment="center"
@@ -77,7 +79,7 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:text="Enrégistrer"
+                    android:text="Enregistrer"
                     android:id="@+id/register"
                     android:textColor="@color/platinum"
                     android:textStyle="bold"
