--- a/app/src/main/res/layout/favoris_layout.xml
+++ b/app/src/main/res/layout/favoris_layout.xml
@@ -31,58 +31,29 @@
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="@color/platinum">
+                android:textColor="@color/blue"
+                android:background="@color/platinum">
 
             </TextView>
 
-            <EditText
+            <RatingBar
+                android:id="@+id/ratingBar"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/username"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="40dp"
-                android:padding="8dp"
-                android:hint="Nom d'utilisateur"
-                android:textColor="@color/black"
-                android:drawablePadding="8dp"/>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/password"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
-                android:inputType="textPassword"
-                android:padding="8dp"
-                android:hint="Mot de passe"
-                android:textColor="@color/black"
-                android:drawablePadding="8dp"/>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/passwordCheck"
-                android:visibility="gone"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
-                android:inputType="textPassword"
-                android:padding="8dp"
-                android:hint="Confirmation du mot de passe"
-                android:textColor="@color/black"
-                android:drawablePadding="8dp"/>
+                android:layout_height="wrap_content"
+                 />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="Connexion"
                 android:id="@+id/connexion"
-                android:textColor="@color/platinum"
-                android:textStyle="bold"
-                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/pumpkin"
-                app:strokeColor = "@color/black"
-                app:cornerRadius = "20dp"/>
+                android:text="Retirer"
+                android:textColor="@color/platinum"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:cornerRadius="20dp"
+                app:strokeColor="@color/black" />
 
 
         </LinearLayout>
