--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -49,6 +49,7 @@
                     android:layout_marginTop="40dp"
                     android:padding="8dp"
                     android:hint="Courriel"
+                    android:textColorHint="@color/black"
                     android:textColor="@color/black"
                     android:drawablePadding="8dp"/>
 
@@ -61,6 +62,7 @@
                     android:inputType="textPassword"
                     android:padding="8dp"
                     android:hint="Mot de passe"
+                    android:textColorHint="@color/black"
                     android:textColor="@color/black"
                     android:drawablePadding="8dp"/>
 
@@ -71,6 +73,7 @@
                     android:background="@drawable/custom_edittext"
                     android:layout_marginTop="20dp"
                     android:inputType="textPassword"
+                    android:textColorHint="@color/black"
                     android:padding="8dp"
                     android:hint="Confirmation du mot de passe"
                     android:textColor="@color/black"
