--- a/app/src/main/res/layout/recycler_view_comment.xml
+++ b/app/src/main/res/layout/recycler_view_comment.xml
@@ -12,16 +12,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:cardCornerRadius="20dp"
         android:layout_marginTop="16dp"
-    app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardBackgroundColor="@color/cardview_light_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="82dp">
+            android:layout_height="82dp"
+            >
 
             <TextView
-                android:id="@+id/parkName"
+                android:id="@+id/comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -29,26 +30,13 @@
                 android:layout_marginBottom="30dp"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="Park Name"
+                android:text=""
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.944" />
 
-            <Button
-                android:id="@+id/parkInfoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="17dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="17dp"
-                android:text="Information"
-                android:background="@color/pumpkin"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
